<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/logInContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:clipToPadding="false"
    app:layout_constraintBottom_toTopOf="@+id/logInBtn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/logoImageView">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logInUsernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:clipChildren="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@drawable/bordered_background"
            android:hint="@string/username"
            android:nextFocusDown="@id/loginPasswordEditText"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:singleLine="true"
            android:translationY="6dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logInPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:clipChildren="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInUsernameContainer"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@drawable/bordered_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:singleLine="true"
            android:translationY="6dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_background"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPasswordContainer" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />

</android.support.constraint.ConstraintLayout>