<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progressDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProgressBackground"
    tools:ignore="Overdraw">

    <android.support.v7.widget.CardView
        android:id="@+id/progressDialogCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/progressDialogCardContentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressDialogCardContentProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp" />

            <TextView
                android:id="@+id/progressDialogCardContentTestView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/user_validation" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>